[package]
name = "esp-helm"
version = "0.0.0"
description = "Maintain ESP32 Development Environment"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
dirs = "5.0.1"
futures = "0.3.28"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = [ "updater", "path-all", "dialog-ask", "dialog-confirm", "dialog-open", "shell-open"] }
tokio = { version = "1.29.1" }
thiserror = "1.0.44"
zip = "0.6.6"
walkdir = "2.3.3"
sysinfo = "0.29.7"
serialport = { version = "4.2.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
